2009-12-09  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/png.c: The png8 encoder would fail when trying to write
	a 1-color image.  Problem reported by Bob Clark.

2009-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Define _GNU_SOURCE and _NETBSD_SOURCE so that
	pwrite() and pread() prototypes are available under GNU Linux and
	NetBSD.

	* coders/tiff.c: Warnings reduction.

	* magick/widget.c: Warnings reduction.

	* magick/segment.c (Classify): Warnings reduction.

	* magick/magic.c (struct StaticMagic): Length and offset can never
	be negative so use an unsigned type rather than size_t.

	* magick/render.c (TracePath): Fix access one beyond the end of
	the points array.

2009-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (GetOptimalKernelWidth1D, GetOptimalKernelWidth1D):
	In the Q32 build, convolution kernel size was estimated
	incorrectly for large sigmas on 32-bit systems due to arithmetic
	overflow.

2009-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): Moved here from fx.c since this
	is a more suitable place for it to be.

	* magick/enhance.c (GammaImage): Improve performance a bit.
	Preserve full precision in Q32 build.

2009-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{channel.c,constitute.c,nt_base.h}: Start using the C'99
	'restrict' keyword.

2009-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickGetImageAttribute): New method to get
	an image attribute.  Patch contributed by Mikko Koppanen.
	(MagickSetImageAttribute): New method to set an image attribute.
	Patch contributed by Mikko Koppanen.

	* magick/constitute.c (ReadImage): Log subimage and subrange.

	* configure: Update to Autoconf 2.65.

	* magick/attribute.c (GenerateIPTCAttribute): Returned IPTC string
	values were one character too short.

2009-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
