@@ -142,6 +142,7 @@ ModuleAliases[] =
   MODULEALIAS("IPTC","META"),
   MODULEALIAS("IPTCTEXT","META"),
   MODULEALIAS("IPTCWTEXT","META"),
+  MODULEALIAS("J2C","JP2"),
   MODULEALIAS("JBG","JBIG"),
   MODULEALIAS("JNG","PNG"),
   MODULEALIAS("JPG","JPEG"),
